--- a/HTML_Pages/homePage.html
+++ b/HTML_Pages/homePage.html
@@ -18,12 +18,14 @@
         <div class="home-smallBtns">
             <button id="loginButton" class="baseButton smallButton"><a href="loginPage.html" class="homeA">Login</a></button>
             <button id="logoutButton" class="baseButton smallButton" onclick="logout()">Logout</button>
+            <button id="submitButton" class="baseButton smallButton"><a href="cardSubmissionPage.html" class="homeA">Submit Card</a></button>
             <script>
                 const usr = sessionStorage.getItem('username');
                 if (usr){
                     document.getElementById('loginButton').style.display = 'none';
                 } else {
                     document.getElementById('logoutButton').style.display = 'none';
+                    document.getElementById('submitButton').style.display = 'none';
                 }
 
                 async function logout(){
@@ -32,7 +34,8 @@
                 }
             </script>
 
-            <button class="baseButton smallButton"><a href="cardSubmissionPage.html" class="homeA">Submit Card</a></button>
+
+            
         </div>
 
         <h1>NoPreference Online Games</h1>
