--- a/HTML_Pages/loginPage.html
+++ b/HTML_Pages/loginPage.html
@@ -30,6 +30,7 @@
                 </form>
 
                 <a href="signupPage.html" style="color: black;">Create Account?</a><br>
+                <a href="homePage.html" style="color: black;">Continue as Guest</a>
 
                 <script>
                     async function checkUser() {
